--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,14 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CSC220StudentArray
 endorsed.classpath=
 excludes=
-file.reference.javafx-swt.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx-swt.jar
-file.reference.javafx.base.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx.base.jar
-file.reference.javafx.controls.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx.controls.jar
-file.reference.javafx.fxml.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx.fxml.jar
-file.reference.javafx.graphics.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx.graphics.jar
-file.reference.javafx.media.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx.media.jar
-file.reference.javafx.swing.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx.swing.jar
-file.reference.javafx.web.jar=../../../../../Program Files/Java/javafx-sdk-12.0.1/lib/javafx.web.jar
+file.reference.javafx-swt.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib\\javafx.web.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -99,7 +99,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Program Files\\Java\\javafx-sdk-12.0.1\\lib" --add-modules javafx.controls,javafx.fxml
+run.jvmargs=--add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
     ${file.reference.javafx-swt.jar}:\
